# buoy

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SPEC.md  buoy.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  deployment.md  plugins.md
plugins/: example_plugin.py
src/buoy/: __init__.py  __main__.py  alerts.py  auth.py  config.py  demo.py  server.py  services.py  storage.py
src/buoy/collectors/: __init__.py  disk.py  docker.py  image_updates.py  network.py  system.py
src/buoy/plugins/: __init__.py  loader.py  protocol.py
src/buoy/plugins/builtin/: __init__.py  actual_budget.py  backup_status.py  cert_expiry.py  cron_health.py  dns_filter.py  github.py  loki.py  (+15 more)
static/: index.html
static/css/: buoy.css
static/css/themes/: light.css  terminal.css
static/js/: buoy.js  detail.js  fleet.js  gauges.js  plugins.js  services.js  ws.js
tests/: test_alerts.py  test_auth.py  test_cert_expiry_plugin.py  test_collectors.py  test_config.py  test_config_debug.py  test_container_history.py  test_fleet_latency.py  test_image_updates.py  test_immich_plugin.py  test_loader.py  test_plugin_dns_filter.py  test_plugin_jellyfin.py  test_plugins.py  test_portainer_plugin.py  test_proxmox_plugin.py  test_server_factory.py  test_services.py  test_smart_disk_plugin.py  test_snapraid_plugin.py  test_storage.py  test_systemd_health.py  test_tailscale_plugin.py  test_trigger_dev_plugin.py  test_wireguard_plugin.py
tests/fixtures/certs/: cert_20d.crt  cert_3d.crt  cert_60d.crt
