[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buoy"
version = "2.0.0-alpha.1"
description = "A lightweight, per-node system dashboard for homelabs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Nick Griffith", email = "ghfargo@gmail.com" }]
keywords = ["homelab", "dashboard", "docker", "monitoring", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "starlette>=0.38,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx",  # for test client
]

[project.scripts]
buoy = "buoy.__main__:main"

[project.urls]
Homepage = "https://github.com/gfargo/buoy"
Repository = "https://github.com/gfargo/buoy"
Issues = "https://github.com/gfargo/buoy/issues"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
